fix(api): Make nested objects optional, to avoid having to deep-load ownership trees
